--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      
         <ul>
             <li><h4>240p-<a href=D:\movies>click here</a></h4></li>
-            <li><h4>360p-<a href=https://moviesda4.net/download/page/73705>click here</a></h4></li>
+            <li><h4>360p-<a href=https://bala.pages.dev/own>click here</a></h4></li>
             <li><h4>480p-<a href=D:\movies>click here</a></h4></li>
             <li><h4>720p-<a href=D:\movies>click here</a></h4></li>
 
